# ol-parliament

./: .gitignore  .travis.yml  README.md  pyproject.toml  renovate.json  requirements.txt  setup.py
.github/workflows/: publish.yml
parliament/: __init__.py  statement.py
parliament/community_auditors/tests/: test_advanced_policy_elements.py  test_credentials_exposure.py  test_permissions_management.py  test_privilege_escalation.py  test_sensitive_access.py  test_single_value_condition_too_permissive.py
utils/: update_iam_data.py
