[project]
name = "parliament"
version = "1.7.0"
description = "parliament audits your AWS IAM policies"
authors = [{ name = "Duo Security", email = "scott@summitroute.com" }]
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "BSD 3"
keywords = [
    "audit",
    "aws",
    "iam",
    "lint",
    "parliament",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "boto3",
    "jmespath",
    "json-cfg",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "autoflake",
    "autopep8",
    "coverage",
    "nose",
    "pylint",
]

[project.urls]
Homepage = "https://github.com/duo-labs/parliament"

[project.scripts]
parliament = "parliament.cli:cli"

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "parliament/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/parliament",
]
