[project]
name = "ol-parliament"
version = "1.7.1"
description = "ol-parliament audits your AWS IAM policies (MIT Open Learning fork of parliament)"
authors = [
  { name = "MIT Open Learning", email = "ol-devops@mit.edu" },
  { name = "Duo Security", email = "scott@summitroute.com" },
]
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["audit", "aws", "iam", "lint", "parliament"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = ["boto3", "jmespath", "json-cfg", "pyyaml"]

[dependency-groups]
dev = [
  "autoflake",
  "autopep8",
  "coverage",
  "pylint",
  "pytest",
  "beautifulsoup4",
  "requests",
  "pytest-cov>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/mitodl/parliament"
Source = "https://github.com/mitodl/parliament"
Issues = "https://github.com/mitodl/parliament/issues"

[project.scripts]
parliament = "parliament.cli:cli"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["parliament"]
exclude = ["parliament/community_auditors/tests"]

[tool.hatch.build.targets.sdist]
include = ["/parliament"]
